--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- favicon -->
-    <link rel="shortcut icon" href="../Images/logos/favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./Images/logos/favicon.jpg" type="image/x-icon">
     <!-- Google-font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,14 +33,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <!--Menú principal de la página / Logo de la empresa-->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid px-5 py-3 d-flex">
-            <a href="index.html"><img class="img-logo" src="../Images/logos/logo.jpg" alt="logo"></a>
+            <a href="index.html"><img class="img-logo" src="./Images/logos/logo.jpg" alt="logo"></a>
             <button class="navbar-toggler texto-medio" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -77,7 +77,7 @@
             </div>
             <!--Imagen principal del salón de eventos-->
             <div class="img-salon-eventos">
-                <img class="img" src="../Images/home/salon tiare.jpg" alt="salón de eventos">
+                <img class="img" src="./Images/home/salon tiare.jpg" alt="salón de eventos">
             </div>
         </section>
         <!--Fin de sección 1-->
@@ -113,7 +113,7 @@
                 <div class="items">
                     <!--Servicio 1 - Catering-->
                     <div class="item">
-                        <img class="img-servicio" src="../Images/servicios/catering.jpg" alt="catering"
+                        <img class="img-servicio" src="./Images/servicios/catering.jpg" alt="catering"
                             data-aos="zoom-in" data-aos-duration="1000">
                         <h2 class="subtitulo-servicio texto-mayor">CATERING</h2>
                         <p class="texto-servicio texto-medio">Ofrecemos un servicio de catering de excelencia con
@@ -123,7 +123,7 @@
                     </div>
                     <!--Servicio 2 - Disc Jockey-->
                     <div class="item">
-                        <img class="img-servicio" src="../Images/servicios/dj-sonido.jpg" alt="dj" data-aos="zoom-in"
+                        <img class="img-servicio" src="./Images/servicios/dj-sonido.jpg" alt="dj" data-aos="zoom-in"
                             data-aos-duration="1000">
                         <h2 class="subtitulo-servicio texto-mayor">DISC-JOCKEY</h2>
                         <p class="texto-servicio texto-medio">Ofrecemos un servicio de Disc-Jockey con sonido e
@@ -133,7 +133,7 @@
                     </div>
                     <!--Servicio 3 - Barra libre-->
                     <div class="item">
-                        <img class="img-servicio" src="../Images/servicios/barra.jpg" alt="barra libre"
+                        <img class="img-servicio" src="./Images/servicios/barra.jpg" alt="barra libre"
                             data-aos="zoom-in" data-aos-duration="1000">
                         <h2 class="subtitulo-servicio texto-mayor">BARRA LIBRE</h2>
                         <p class="texto-servicio texto-medio">Ofrecemos un servicio exclusivo para tu evento, con
@@ -169,7 +169,7 @@
             </div>
             <!--Imagen de quienes conforman la empresa-->
             <div class="img-nuestra-empresa">
-                <img class="img-empresa" src="../Images/nosotros/nosotros.jpg" alt="empresa">
+                <img class="img-empresa" src="./Images/nosotros/nosotros.jpg" alt="empresa">
             </div>
             <!--Fin de sección 4-->
         </section>
