--- a/reserva.html
+++ b/reserva.html
@@ -44,10 +44,11 @@
         <!--Sección 1 -->
         <!--Comienzo del formulario de reserva-->
         <form id="formulario__reservar" class="formulario__reservar">
-            <h1 class="titulo_reservar texto-mayor" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
+            <h1 class="titulo_reservar texto-mayor" data-aos="fade-down" data-aos-easing="linear"
+                data-aos-duration="1000">
                 FORMULARIO DE RESERVA</h1>
             <!-- Datos personales -->
-            <h2 class="texto_reservar_uno texto-medio">INFORMACIÓN DE CONTACTO <i class="fa-regular fa-user"></i></h2>
+            <h2 class="texto_reservar_uno texto-mayor">INFORMACIÓN DE CONTACTO <i class="fa-regular fa-user"></i></h2>
             <!-- Nombre y Apellido -->
             <div class="formulario__grupo__dos" id="grupo__nombre__dos">
                 <label for="nombre__dos" class="formulario__label__dos texto-mayor">Nombre y Apellido</label>
@@ -81,7 +82,8 @@
                 <p class="formulario__input-error__dos">Solo debe contener números y punto.</p>
             </div>
             <!-- Datos de la tarjeta -->
-            <h2 class="texto_reservar_dos texto-medio">INFORMACIÓN DE PAGO <i class="fa-solid fa-pen-to-square"></i></h2>
+            <h2 class="texto_reservar_dos texto-mayor">INFORMACIÓN DE PAGO <i class="fa-regular fa-pen-to-square"></i>
+            </h2>
             <!-- Nombre completo del titular -->
             <div class="formulario__grupo__dos" id="grupo__nombre__tres">
                 <label for="nombre__tres" class="formulario__label__dos texto-mayor">Nombre y Apellido del
@@ -175,7 +177,8 @@
         <div class="grid">
             <!--Redes sociales-->
             <div class="texto-footer texto-medio">
-                <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">SALÓN DE EVENTOS TIARE</h2>
+                <h2 class="titulo-footer texto-mayor" data-aos="zoom-in" data-aos-duration="1000">SALÓN DE EVENTOS TIARE
+                </h2>
                 <h3 class="subtitulo-footer texto-medio">Seguinos en nuestras redes y enterate de todas las
                     novedades que tenemos para vos!</h3>
             </div>
